--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h2 {
 }
 .wrapper .carousel{
   display: grid;
+  margin: 0 3rem;
   grid-auto-flow: column;
   grid-auto-columns: calc((100% / 3) - 12px);
   overflow-x: auto;
@@ -72,37 +73,36 @@ h2 {
 .carousel.dragging .card {
   cursor: grab;
   user-select: none;
+
 }
 .carousel :where(.card, svg) {
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .carousel .card {
   scroll-snap-align: start;
-  /* height: 342px; */
   list-style: none;
   background: #fff;
   cursor: pointer;
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 8px;
   display: flex;
 }
 .carousel .card svg {
   background: #f4f7ff;
   height: 80px;
-  width: 80px;
+  min-width: 80px;
   padding: 20px;
+  margin-right: 1rem;
   border-radius: 10px;
 }
 .carousel .card h2 {
   font-weight: 500;
-  font-size: 1.1rem;
-  margin: 30px 0 5px;
+  font-size: 1rem;
+  text-align: start;
 }
 .carousel .card span {
   color: #6A6D78;
-  font-size: .85rem;
+  font-size: .75rem;
 }
 
 @media screen and (max-width: 900px) {
@@ -116,3 +116,4 @@ h2 {
     grid-auto-columns: 100%;
   }
 }
+
